vlib/v/checker/tests/import_symbol_type_err.vv
import crypto { Coin }

fn main() {
	println(Coin{})
}
